<resources>
    <string name="BudgetPlan">myJob</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log">Log</string>
    <string name="text">What is Your Career</string>
    <string name="goals">My Goals</string>
    <string name="textGoal">Enter your new goal</string>
    <string name="first">First Goal</string>
    <string name="second">Second Goal</string>
    <string name="third">Third Goal</string>
    <string name="target_amount">Target Amount</string>
    <string name="seved_already">Saved Already</string>
    <string name="desirde_date">Desired data</string>
    <string name="vehicle">Vehicl</string>
    <string name="note">Note</string>
    <string name="vehi_cle">Vehicle</string>
    <string name="goal_details">Goal_Details</string>
    <string name="goal">Goal Details</string>
    <string name="goal_detail">Goal Detail</string>
    <string name="amount">Today  added amount</string>
    <string name="today">Today added amount</string>
    <string name="today_amount">1000</string>
    <string name="amount_id">LKR.1000</string>
    <string name="week_id">Week added amount</string>
    <string name="week_id2">LKR 6000</string>
    <string name="monthly">Monthly added amount</string>
    <string name="monthly_id">LKR 15000</string>
    <string name="year">Year added amount</string>
    <string name="button1" />
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="budget">Budget</string>
    <string name="goal_card">Goal</string>
    <string name="dashbord">Dashbord</string>
    <string name="vehicle_">Vehicle</string>
    <string name="vehicle__">Vehicle</string>
    <string name="goal_detai">Goal Detail</string>
    <string name="year_amount">LKR.00</string>
    <string name="year_amoun">LKR.00.00</string>
    <string name="note_">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</string>
    <string name="button">Update</string>
    <string name="value">LKR.00.00</string>
    <string name="added_amount">Added amount</string>
    <string name="total_amount">Total amount</string>
    <string name="holiday_trip">Holiday Trip</string>
    <string name="education">Education</string>
    <string name="target_amount_">Target amount</string>
    <string name="new_camera">New camera</string>
    <string name="new_goal">Add your  new  goal</string>
    <string name="new_goal_">Add your new goal</string>
    <string name="targetamount">LKR:150000.00</string>
    <string name="desired_date">Desired date</string>
    <string name="date">2024/03/17</string>
    <string name="already_amount">"Saved already "</string>
    <string name="savedalready">Saved already</string>
    <string name="amount_">LKR:10000.00</string>
    <string name="note__">Note</string>
    <string name="addamount">Add amount</string>
    <string name="remainingamount">Remaining amount</string>
    <string name="remaining">149000</string>
    <string name="remaining_">LKR:149000.00</string>
    <string name="add">Add amount</string>
    <string name="lkr">LKR:00.00</string>
    <string name="addamount__">LKR:00.00</string>
    <string name="delete">DELETE</string>
    <string name="newgoal">What are you saving for?</string>
    <string name="name">Name</string>
    <string name="goalname">Your goal\'s name</string>
    <string name="goalcreat">Create goal</string>
    <string name="Target_amount_add">LKR:00.00</string>
    <string name="today_add_amount">LKR:00.00</string>
    <string name="value_">LKR:00.00</string>
    <string name="note___">Note</string>
    <string name="text__">Text</string>
    <string name="name__">first name</string>
    <string name="lastname">Last name</string>
    <string name="lastname_">last name</string>
    <string name="Email">Email</string>
    <string name="email__">email</string>
    <string name="dateofbirth">date of birth</string>
    <string name="select_gender">Select gender</string>
    <string name="password_">Password change</string>
    <string name="passwordenter">Password</string>
    <string name="confirmyourpassword">Confirm your password</string>
    <string name="total">Total expenses</string>
    <string name="totalexpenses">Total Expenses</string>
    <string name="amount_1">LKR:20000.00</string>
    <string name="balance">LKR:18000.00</string>
    <string name="food">FOOD</string>
    <string name="amount_2">LKR:500.00</string>
    <string name="communication">Communication</string>
    <string name="communication_">LKR:1000.00</string>
    <string name="helth">Health</string>
    <string name="health_amount">LKR:5000.00</string>
    <string name="expenses_3">Expenses</string>
    <string name="food_">Food</string>
    <string name="date_1">13 jan  2023</string>
    <string name="amount_3">LKR:500.00</string>
    <string name="remove">remove</string>
    <string name="amount_4">LKR:1000.00</string>
    <string name="date_12">24 jan 2023</string>
    <string name="income_">Income</string>
    <string name="income_type">Add your income type</string>
    <string name="type">Type</string>
    <string name="type_1">Type</string>
    <string name="add_amount">LKR:00.00</string>
    <string name="add_1">Add</string>
    <string name="total_income">Total income</string>
    <string name="total_income_">Total income</string>
    <string name="totalincome">Total income</string>
    <string name="income_amount">LKR:100000.00</string>
    <string name="deposit">Deposit</string>
    <string name="deposite_income">LKR:20000.00</string>
    <string name="remove_">remove</string>
    <string name="salary">Salary</string>
    <string name="salary_">LKR:50000.00</string>
    <string name="rent">Rent</string>
    <string name="button_23">Add Income</string>
    <string name="cash_flow">Cash flow</string>
    <string name="date_2">Date</string>
    <string name="dob">DAY/MONTH/YEAR</string>
    <string name="dob_">day/month/year</string>
    <string name="gender">Male</string>
    <string name="month">" 1 Month"</string>
    <string name="month_">1 Month</string>
    <string name="month_amount">LKR:10000.00</string>
    <string name="year_amount_">1 year</string>
    <string name="plan_name">Budget plan name</string>
    <string name="plan_name_">Budget Plan Name</string>
    <string name="week_">week</string>
    <string name="name___">name</string>
    <string name="date_3">13 jan 2023</string>
    <string name="Register">Register</string>
    <string name="firstname">first name</string>
    <string name="lastname__">last name</string>
    <string name="gender_">gender</string>
    <string name="password__">password</string>
    <string name="confirm__">confirm password</string>
    <string name="income___">Income</string>
    <string name="expenses__">Expenses</string>
    <string name="newexpense">newexpenses</string>
</resources>